--- a/webapp/view/App.view.xml
+++ b/webapp/view/App.view.xml
@@ -1,4 +1,5 @@
 <mvc:View
+    controllerName="ui5.databinding.controller.App"
     xmlns="sap.m"
     xmlns:mvc="sap.ui.core.mvc"
     xmlns:form="sap.ui.layout.form"
@@ -45,6 +46,16 @@
                     id="address"
                     htmlText="{data_json>/address/stress}&lt;br>{data_json>/address/zip} {data_json>/address/city}&lt;br>{data_json>/address/country}"
                     width="200px"
+                />
+                <Link
+                    href="{
+                        parts: [
+                            'data_json>/firstName',
+                            'data_json>/lastName'
+                        ],
+                        formatter: '.formatMail'
+                    }"
+                    text="{data_i18n>sendEmail}"
                 />
             </l:VerticalLayout>
         </content>
