--- a/webapp/view/App.view.xml
+++ b/webapp/view/App.view.xml
@@ -1,9 +1,13 @@
 <mvc:View
     controllerName="ui5.databinding.controller.App"
     xmlns="sap.m"
+    xmlns:core="sap.ui.core"
     xmlns:mvc="sap.ui.core.mvc"
     xmlns:form="sap.ui.layout.form"
     xmlns:l="sap.ui.layout"
+    core:require="{
+        Currency: 'sap/ui/model/type/Currency'
+    }"
 >
     <Panel
         headerText="{data_i18n>panelHeaderText}"
@@ -40,7 +44,10 @@
     >
         <content>
             <l:VerticalLayout>
-                <Label labelFor="address" text="{data_i18n>address}:"></Label>
+                <Label
+                    labelFor="address"
+                    text="{data_i18n>address}:"
+                />
                 <FormattedText
                     class="sapUiSmallMarginBottom"
                     id="address"
@@ -49,13 +56,30 @@
                 />
                 <Link
                     href="{
-                        parts: [
-                            'data_json>/firstName',
-                            'data_json>/lastName'
-                        ],
+                        parts: ['data_json>/firstName', 'data_json>/lastName'],
                         formatter: '.formatMail'
                     }"
                     text="{data_i18n>sendEmail}"
+                />
+            </l:VerticalLayout>
+            <l:VerticalLayout>
+                <Label
+                    labelFor="salesAmount"
+                    text="{data_i18n>salesAmount}:"
+                />
+                <Input
+                    description="{/currencyCode}"
+                    enabled="{data_json>/enabled}"
+                    id="salesAmount"
+                    value="{
+                        parts: [
+                            {path: 'data_json>/salesAmount'},
+                            {path: 'data_json>/currencyCode'}
+                        ],
+                        type: 'Currency',
+                        formatOptions: {showMeasure: false}
+                    }"
+                    width="200px"
                 />
             </l:VerticalLayout>
         </content>
